# ren-rust

./: .gitignore  Cargo.toml
ast/: Cargo.toml  language-structure.elm
ast/src/: conversion_tests.rs  core.rs  decl.rs  declaration.rs  expr.rs  expression.rs  lib.rs  pattern.rs  ren_type.rs  serde_utils.rs  span.rs
ast/src/expr/: literal.rs  mod.rs  operator.rs  pattern.rs
ast/src/expr/tests/: mod.rs  serde.rs
ast/src/module/: import.rs  mod.rs
derive_tokentype/: Cargo.toml
derive_tokentype/src/: lib.rs  simple_enum.rs  spanned_token.rs
lexer/: Cargo.toml
lexer/src/: lexer.rs  lib.rs
lexer/src/test/token/: expression.rs  literal.rs  mod.rs
lexer/src/token/: expression.rs  mod.rs  string.rs
lsp/: Cargo.toml
lsp/src/: lib.rs
parser/: Cargo.toml
parser/src/: declaration.rs  import.rs  lib.rs  parser.rs  string.rs
parser/src/ast/: expr.rs  extensions.rs  mod.rs
parser/src/ast/into_elm_ast/: mod.rs  tests.rs
parser/src/ast/tests/: mod.rs  sample_expressions.ren
parser/src/context/: importctx.rs  mod.rs  partial.rs  stack.rs  string.rs
parser/src/grammar/: declaration.rs  expression.rs  mod.rs  module.rs  pattern.rs  ren_type.rs
parser/src/grammar/tests/: expression.rs  mod.rs  module.rs  pattern.rs  ren_type.rs  syntax.ren.parsed
parser/src/lexer/: mod.rs
parser/src/lexer/syntax/: context.rs  mod.rs  string_token.rs  token.rs
parser/src/lower_ast/: decl.rs  expr.rs  extensions.rs  import.rs  literal.rs  macro_impl.rs  mod.rs  module.rs  pattern.rs  ren_type.rs
parser/src/lower_ast/into_elm_ast/: mod.rs  tests.rs
parser/src/lower_ast/tests/: mod.rs  sample.ren  sample_expressions.ren  sample_expressions.ren.expected
parser/src/parser/: expression.rs  marker.rs  mod.rs
parser/src/syntax/: context.rs  mod.rs
parser/src/tests/: import_tests.rs  mod.rs
parser/src/to_ast/: mod.rs  tests.rs
ren_json_derive/: Cargo.toml
ren_json_derive/src/: lib.rs
ren_json_derive/src/data/: attribute.rs  mod.rs
src/: cli.rs  import.rs  import_parser.rs  main.rs  names.rs  namespace.rs  parser.rs  string_parser.rs  token.rs  value.rs
src/ast/: declaration.rs  expression.rs  import.rs  mod.rs  names.rs  namespace.rs
src/ast-outdated/: declaration.rs  expression.rs  mod.rs  names.rs  namespace.rs
src/parser/: declaration.rs  expression.rs  import.rs  mod.rs  module.rs  test.rs
src/parser/expression/: complex.rs  identifier.rs  literal.rs  mod.rs
src/parser/lexer/: mod.rs  test.rs  token.rs
src/parser/test/: declaration_tests.rs  expression_tests.rs  import_tests.rs  mod.rs  pattern_tests.rs
src/repl/: command.rs  env.rs  mod.rs  mode.rs
src/test/: mod.rs  syntax.ren.parsed
(+6 files in other folders)
