[package]
name = "parser-rust"
version = "0.1.0"
authors = ["Alpvax <alpvax@netscape.net>"]
edition = "2021"

[workspace]
members = ["ast", "parser", "ren_json_derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
remote = ["reqwest"]

[dependencies]
ast = { path = "./ast" }
line-col = "0.2.1"
parser = { path = "./parser" }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
rustyline = "10.0.0"

[dev-dependencies]
expect-test = "1.3"
