[package]
name = "parser-rust"
version = "0.1.0"
authors = ["Alpvax <alpvax@netscape.net>"]
edition = "2021"

[workspace]
members = ["ast", "lsp", "parser", "ren_json_derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cli"]
remote = ["reqwest"]
cli = []

[dependencies]
ast = { path = "./ast" }
clap = { version = "4.0.29", features = ["cargo", "derive"] }
line-col = "0.2.1"
ren_lsp = { package = "lsp", path = "./lsp" }
parser = { path = "./parser" }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
rustyline = "11.0.0"

[dev-dependencies]
expect-test = "1.3"
