[package]
name = "ast"
version = "0.1.0"
authors = ["Alpvax <alpvax@netscape.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ren_json_derive = { path = "../ren_json_derive" }
array-init = "2.0"
either = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
expect-test = "1.3"
